[package]
name = "hashi-guardian"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde_bytes = "0.11.17"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
tonic-health.workspace = true
hashi-types = { path = "../hashi-types" }

# Crypto dependencies
rand.workspace = true
bitcoin.workspace = true
k256.workspace = true
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package="aws-nitro-enclaves-nsm-api", optional = false }
hpke.workspace = true

# AWS dependencies
aws-config = "1.1.7"
aws-sdk-s3 = "1.12.0"
aws-credential-types = "1"

aws-smithy-mocks = { version = "0.1", optional = true }

[dev-dependencies]
aws-sdk-s3 = { version = "1.12.0", features = ["test-util"] }
aws-smithy-mocks = "0.1"

[features]
# Stubs out the AWS Nitro NSM attestation call so the guardian can run
# outside a Nitro enclave. Do not enable for prod builds.
non-enclave-dev = []
# Exposes `test_utils` to external crates.
test-utils = ["dep:aws-smithy-mocks", "aws-sdk-s3/test-util"]
