[package]
name = "hashi-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bitcoin.workspace = true
corepc-client.workspace = true
jsonrpc.workspace = true
clap.workspace = true
hashi-types = { path = "../hashi-types" }
# guardian imported for s3 logger
hashi-guardian = { path = "../hashi-guardian" }
hex.workspace = true
hpke.workspace = true
k256.workspace = true
rand.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
e2e-tests = { path = "../e2e-tests" }
hashi-guardian = { path = "../hashi-guardian", features = ["test-utils"] }
tempfile.workspace = true
